Changed to remember the query charset in GetInternetSearchURL(). Then use it to convert from that charset to UTF-8 in FindInternetSearchResults(), bug 42221, r=rjc.